Add to login setup: disable login button, show user email instead and enable menu btn

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -20,8 +20,9 @@
         <button id="try-again-button">Try Again</button>
     </div>
 	
-	<button id="menu-btn" class="menu-button">
-    <i class="fas fa-bars"></i>
+	
+	<button id="menu-btn" class="menu-button" disabled>
+		<i class="fas fa-bars"></i>
 	</button>
 	
 	<div id="sidebar-overlay" class="sidebar-overlay hidden"></div>
