Start implement user files cloud storage

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -98,6 +98,6 @@
             <iframe id="output"></iframe>
         </div>
     </div>
-    <script src="..\src\script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 </html>
