--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -27,12 +27,35 @@
 	
 	<div id="sidebar-overlay" class="sidebar-overlay hidden"></div>
 
+    <!-- Create New File/Folder Modal -->
+    <div id="create-modal" class="create-modal hidden">
+        <div class="create-modal-content">
+            <h4 id="create-modal-title">
+                <i id="create-modal-icon" class="fas"></i>
+                <span id="create-modal-text">New File</span>
+            </h4>
+            <input type="text" id="create-name-input" placeholder="Enter name..." />
+            <div class="create-modal-actions">
+                <button id="cancel-create-btn" class="cancel-btn">Cancel</button>
+                <button id="confirm-create-btn" class="create-btn">Create</button>
+            </div>
+        </div>
+    </div>
+
 	<div id="sidebar" class="sidebar">
     <div class="sidebar-header">
         <h3><i class="fas fa-folder"></i> Files</h3>
-        <button id="close-sidebar-btn">
-            <i class="fas fa-times"></i>
-        </button>
+        <div class="sidebar-actions">
+            <button id="new-file-btn" class="sidebar-action-btn" title="New File">
+                <i class="fas fa-file-plus"></i>
+            </button>
+            <button id="new-folder-btn" class="sidebar-action-btn" title="New Folder">
+                <i class="fas fa-folder-plus"></i>
+            </button>
+            <button id="close-sidebar-btn">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
     </div>
     <div class="sidebar-content">
         <div class="file-tree">
