Client UI: Displaying current file name added

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -111,6 +111,10 @@
 		</div>
     </header>
     <div class="editor-container">
+		<div id="current-file-display" class="current-file-display hidden">
+			<i class="fas fa-file-code"></i>
+			<span id="current-file-name">No file selected</span>
+		</div>
         <div class="code-editor">
             <div id="line-numbers"></div>
             <textarea id="gravity-code" placeholder="Write your Python code here..."></textarea>
