Fix (UI): Email input check on registry

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -104,7 +104,7 @@
 					</div>
 					<div class="buttons-container">
 						<button type="submit" class="login-btn">Login</button>
-						<button type="button" class="register-btn">Register</button>
+						<button type="submit" class="register-btn">Register</button>
 					</div>
 				</form>
 			</div>
