--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="..\src\styles\styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@500&family=Iosevka&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.min.js"></script>
 </head>
 <body>
     <div id="loading-container">
@@ -117,7 +118,10 @@
 		</div>
         <div class="code-editor">
             <div id="line-numbers"></div>
-            <textarea id="gravity-code" placeholder="Write your Python code here..."></textarea>
+            <!-- <textarea id="gravity-code" placeholder="Write your Python code here..."></textarea> -->
+			
+			<div id="editor" ></div>
+			
             <button id="exit-fullscreen-btn" class="hidden"><i class="fas fa-compress"></i> Exit Full Screen</button>
         </div>
         <div class="output-container">
