Adjust window & Remove line numbers

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -117,11 +117,8 @@
 			<span id="current-file-name">No file selected</span>
 		</div>
         <div class="code-editor">
-            <div id="line-numbers"></div>
-            <!-- <textarea id="gravity-code" placeholder="Write your Python code here..."></textarea> -->
-			
+            <!-- <div id="line-numbers"></div> -->
 			<div id="editor" ></div>
-			
             <button id="exit-fullscreen-btn" class="hidden"><i class="fas fa-compress"></i> Exit Full Screen</button>
         </div>
         <div class="output-container">
