Files side-bar (UI): Added delete, rename, and download button

--- a/editor/public/index.html
+++ b/editor/public/index.html
@@ -72,6 +72,13 @@
                 </div>
             </div>
         </div>
+		<div id="context-menu" class="context-menu hidden">
+			<ul>
+				<li id="delete-file-btn"><i class="fas fa-trash-alt"></i> Delete File</li>
+				<li id="rename-file-btn"><i class="fas fa-edit"></i> Rename File</li>
+				<li id="download-file-btn"><i class="fas fa-download"></i> Download File</li>
+			</ul>
+		</div>
     </div>
 </div>
 	
