--- a/editor/index.html
+++ b/editor/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codebox</title>
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="stylesheet" href="..\src\styles\styles.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="stylesheet" href="styles\styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@500&family=Iosevka&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.min.js"></script>
@@ -134,6 +134,6 @@
             <iframe id="output"></iframe>
         </div>
     </div>
-    <script src="../src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
