Disable screen in conn error

--- a/editor/index.html
+++ b/editor/index.html
@@ -19,6 +19,8 @@
       <div class="throbber"></div>
       <p>Connecting to server...</p>
    </div>
+   <!-- Error Overlay -->
+   <div id="error-overlay" class="error-overlay"></div>
    <!-- Error Message Container -->
    <div id="error-message" class="hidden">
       <p>Unable to connect to the server. Please check your connection.</p>
